Fix for wrong colors

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,6 @@
 :root,
 .theme-dark,
 .theme-light {
-    --rgb-highlight: 74, 239, 152;
     --highlight: rgb(var(--rgb-highlight));
     --rgb-background: 0, 9, 0;
     --background: rgb(var(--rgb-background));
